# car-part-core-micro/angular/src/app/core/api/v1/model/models.ts
@@ -15,5 +15,6 @@ export * from './partManufacturerRequest';
 export * from './partManufacturerResponse';
 export * from './partRequest';
 export * from './partResponse';
+export * from './partResponse2';
 export * from './priceRequest';
 export * from './priceResponse';
