# car-part-core-micro/angular/src/app/core/api/v1/model/partResponse2.ts
@@ -1,0 +1,27 @@
+/**
+ * car-part-core openapi spec
+ *
+ * Contact: blabla@gmail.com
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+import { PriceResponse } from './priceResponse';
+
+
+export interface PartResponse2 { 
+    id: string;
+    /**
+     * name of car part
+     */
+    name: string;
+    /**
+     * identification number of the part
+     */
+    partNumber: string;
+    price: PriceResponse;
+    manufacturer: string;
+    model: string;
+}
+
